[gd_scene load_steps=23 format=2]

[ext_resource path="res://characters/players/fire_man/assets/FiremanIconGUI.png" type="Texture" id=1]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healtbar_special_progress.png" type="Texture" id=2]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_border.png" type="Texture" id=3]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_health_progress.png" type="Texture" id=4]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_stamina_progress.png" type="Texture" id=5]
[ext_resource path="res://worlds/collectable_items/coins/animated_textures/Coin Animated Texture.tres" type="Texture" id=6]
[ext_resource path="res://gui/huds/you_died_screen/scenes/YouDiedPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/huds/player-hud/fonts/OriginalMinimalPixel.tres" type="DynamicFont" id=8]
[ext_resource path="res://gui/huds/player-hud/scripts/PlayerGUI.gd" type="Script" id=9]
[ext_resource path="res://gui/MinimalPixel_v2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://gui/huds/player-hud/fonts/MinimalPixel_v2.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://gui/huds/pause_menu/scenes/PauseMenu.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Player message goes here!" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 200 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Player message goes here!" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:custom_colors/font_color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 200 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade-out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.803922, 0.0901961, 0.0901961, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "show_elemental_message"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You ran out of elemental power!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 611, 240 ), Vector2( 611, 220 ), Vector2( 611, 220 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.368627, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "show_manna_message"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You ran out of manna!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.819608, 0.788235, 0.0313726, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 180 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Player message goes here!" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 200 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Player message goes here!" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:custom_colors/font_color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 200 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade-out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.803922, 0.0901961, 0.0901961, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "show_elemental_message"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You ran out of elemental power!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 611, 240 ), Vector2( 611, 220 ), Vector2( 611, 220 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerElementalMessage:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.368627, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "show_manna_message"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You ran out of manna!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.819608, 0.788235, 0.0313726, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerMessagesControl/PlayerMannaMessage:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 180 ) ]
}

[node name="PlayerGUI" type="CanvasLayer" groups=["PlayerGUI", "coins_send"]]
pause_mode = 2
script = ExtResource( 9 )

[node name="PlayerInfoControl" type="Control" parent="."]
margin_left = 9.0
margin_top = -55.0
margin_right = 49.0
margin_bottom = -15.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerBarControl" type="Control" parent="PlayerInfoControl"]
margin_left = 10.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 89.9997
__meta__ = {
"_edit_group_": true
}

[node name="PlayerHealthBar" type="TextureProgress" parent="PlayerInfoControl/PlayerBarControl"]
margin_left = 41.0
margin_top = 10.0
margin_right = 124.0
margin_bottom = 21.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="PlayerSpecialBar" type="TextureProgress" parent="PlayerInfoControl/PlayerBarControl"]
margin_left = 41.0
margin_top = 25.0
margin_right = 124.0
margin_bottom = 36.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="PlayerElementalBar" type="TextureProgress" parent="PlayerInfoControl/PlayerBarControl"]
margin_left = 41.0
margin_top = 40.0
margin_right = 124.0
margin_bottom = 51.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )

[node name="PlayerIcon" type="TextureRect" parent="PlayerInfoControl/PlayerBarControl"]
margin_right = 96.0
margin_bottom = 102.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CoinsIcon" type="TextureRect" parent="PlayerInfoControl"]
margin_left = 64.0
margin_top = 107.5
margin_right = 74.0
margin_bottom = 117.5
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Coins" type="Label" parent="PlayerInfoControl"]
margin_left = 86.5
margin_top = 112.0
margin_right = 95.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Score" type="Label" parent="PlayerInfoControl"]
margin_left = 254.0
margin_top = 112.0
margin_right = 299.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 8 )
text = "00000"

[node name="PlayerMessagesControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayerMannaMessage" type="Label" parent="PlayerMessagesControl"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 611.0
margin_top = 200.0
margin_right = 1297.0
margin_bottom = 283.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Player message goes here!"
align = 1
valign = 1

[node name="PlayerElementalMessage" type="Label" parent="PlayerMessagesControl"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 611.0
margin_top = 200.0
margin_right = 1297.0
margin_bottom = 283.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Player message goes here!"
align = 1
valign = 1

[node name="Sounds" type="Node" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fade-out = SubResource( 2 )
anims/show_elemental_message = SubResource( 8 )
anims/show_manna_message = SubResource( 7 )

[node name="MessageAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/fade-out = SubResource( 10 )
anims/show_elemental_message = SubResource( 11 )
anims/show_manna_message = SubResource( 12 )

[node name="GameOverBackground" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.141176, 0.12549, 0.12549, 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 12 )]

[node name="YouDiedScreen" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="value_changed" from="PlayerInfoControl/PlayerBarControl/PlayerHealthBar" to="." method="_on_PlayerHealthBar_value_changed"]
[connection signal="value_changed" from="PlayerInfoControl/PlayerBarControl/PlayerSpecialBar" to="." method="_on_PlayerSpecialBar_value_changed"]
[connection signal="value_changed" from="PlayerInfoControl/PlayerBarControl/PlayerElementalBar" to="." method="_on_PlayerElementalBar_value_changed"]
[connection signal="finished" from="Sounds/GameOver" to="." method="_on_GameOver_finished"]
[connection signal="animation_finished" from="Animator" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="MessageAnimator" to="." method="_on_AnimationPlayer_animation_finished"]
